force-app/main/default/objects/PMC_DH_PersonaPermissionSetGroup__mdt/PMC_DH_PersonaPermissionSetGroup__mdt.object-meta.xml
<CustomObject>
    <description>This metadata will be used for 
1. Assignment of the profile and permission set group to user 
2. Use the metadata as picklist values on modal - role type (display name)</description>
    <label>PMC DH PersonaPermissionSetGroup</label>
    <pluralLabel>PMC DH PersonaPermissionSetGroups</pluralLabel>
</CustomObject>