force-app/main/default/objects/PMC_DH_PersonaPermissionSetGroup__mdt/fields/intDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>intDisplayOrder__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>