force-app/main/default/objects/PMC_DH_PersonaPermissionSetGroup__mdt/fields/strDisplayNameCustomLabelApiName__c.field-meta.xml
<CustomField>
    <fullName>strDisplayNameCustomLabelApiName__c</fullName>
    <label>Display Name (custom label api name )</label>
    <length>255</length>
    <type>Text</type>
</CustomField>