force-app/main/default/objects/PMC_DH_PersonaPermissionSetGroup__mdt/fields/strPermissionSetGroup__c.field-meta.xml
<CustomField>
    <fullName>strPermissionSetGroup__c</fullName>
    <label>Permission Set Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>