force-app/main/default/objects/PMC_DH_PersonaPermissionSetGroup__mdt/fields/strProfile__c.field-meta.xml
<CustomField>
    <fullName>strProfile__c</fullName>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>